# AmurNewsBot

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
app/: config.py  database.py  main.py
app/admin/: auth.py  views.py
app/bot/: bot.py  config.py  funcs.py
app/migrations/: env.py
app/migrations/versions/: 51db94a3982a_added_users_table.py
app/news/: news_parser.py  router.py  schemas.py
app/tests/: conftest.py
app/tests/unit_tests/: test_find_user.py
app/users/: dao.py  model.py  router.py
