[tool.poetry]
name = "news-bot"
version = "0.1.0"
description = ""
authors = ["ScrollDude <stepakinoyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
sqlmodel = "^0.0.18"
alembic = "^1.13.1"
aiogram = "^3.6.0"
asyncpg = "^0.29.0"
ruff = "^0.4.6"
mypy = "^1.10.0"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
beautifulsoup4 = "^4.12.3"
fake-useragent = "^1.5.1"
lxml = "^5.2.2"
sqladmin = "^0.17.0"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
